 o Rework Walk dialog.  Put entry field at the top. (Steven)
 o Get Subjectwidth/left working in the collector. (Gregg)
 o Change Config->Edit and Config->Palette menus to have no default (Steven)
 o Avoid spurious error reports for R/O directories on FAT volumes.  Ticket #116. (Steven)
 o Add immediate updates toggle to config menu.  Ticket #132. (Steven)

3.09
 o Check program strings entered in assoc, commands & settings for quoting,
 file extension, space before args and existence on entry. (Gregg)
 o Add TestFDate and TestCDate for date compare and sort functions (Gregg)
 o Use commaFMTULL for formating additional file, EA etc size information(Gregg)
 o Give LIBPATHSTRICT option for mailto & run FTP/HTTP (Gregg)
 o Add "mailto" option in new viewer (Gregg)
 o Make WPURLDEFAULTSETTINGS the fall back for ftp/httprun (Gregg)
 o Update CopyPresParams to copy all types of pres parameters (Gregg)
 o Add "Save as" menu item to internal viewer (Gregg)
 o Eliminate deletion of ext path if it was not valid on startup
 o Allow saving of a currently not valid ext path with warning (Gregg)
 o Internal editor now handles readonly files (Gregg)
 o Correct hex edit buffer sizing to avoid data loss (Steven)
 o Use CopyPresParams to fix presparam inconsistencies in menus  (Gregg)
 o Correct variable cast to fix hex code display problem (Gregg)
 o Correct variable cast to fix hex code display problem (Gregg)
 o Update includes to allow standalone usage (Steven)
 o Switch to wrc.exe default; support USE_RC from environment (Steven)
 o Avoid out of memory traps in Compare Directories (Steven)
 o Correct INI editor copy failures (Steven)
 o Use CloseProfile to avoid spurious system INI closes (Steven)

3.08
 o Cancel in walk directories dialog now directly closes dialog even if
   directory path text has changed (Gregg)
 o Fixed seek and scan crash caused by file names that exceed maxpath(Gregg)
 o Fixed INVALID_NAME error caused by FILEFIND buffer crossing a 64k boundry (Steven)